# solidblocks

./: .editorconfig  .gitignore  .gitmodules  .semver.yaml  CHANGELOG.md  CLAUDE.md  LICENSE.MD  README.md  README_template.md  TODO.md  build.gradle.kts  cliff.toml  do  do.py  gradle.properties  gradlew  mise.sh  mise.toml  renovate.json  requirements.txt  rsync_exclude  settings.gradle.kts  test.pem  test.sh  version.txt
solidblocks-do-python/: README.md  do  mise.toml  pyproject.toml  test.sh
solidblocks-do-python/blcks_do/: command.py  log.py  secrets_pass.py  terraform.py  tofu.py
solidblocks-do-python/solidblocks_do/: __init__.py  command.py  log.py  secrets.py  secrets_pass.py  terraform.py  tofu.py
solidblocks-do-python/tests/: test_command.py  test_json_command_empty.sh  test_json_command_error.sh  test_json_command_invalid.sh  test_logging.py  test_pass.py  test_terraform.py  test_tofu.py
solidblocks-do-python/tests/secrets/: .gpg-id  foo.gpg
solidblocks-do-python/tests/secrets/override/: password.gpg
solidblocks-do-python/tests/secrets/some/: password.gpg  secret-with-dashes.gpg
solidblocks-do-python/tests/terraform/: main.tf
solidblocks-do-python/tests/tofu/: main.tf
solidblocks-python/: do  pyproject.toml
solidblocks-python/solidblocks_do/: __init__.py  command.py  terraform.py  tofu.py
solidblocks-python/tests/: test_command.py  test_json_command.sh  test_logging.py  test_pass.py  test_terraform.py  test_tofu.py
solidblocks-python/tests/secrets/override/: password.gpg
solidblocks-python/tests/secrets/some/: password.gpg  (+1 more)
(+3272 files in other folders)
