[project]
name = "blcks_do"
version= "0.4.8-rc3"
description = "Reusable Python functions for infrastructure automation and developer experience"
authors = [
    { name = "Christian 'Pelle' Pelster", email = "pelle@pelle.io" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog==6.9.0",
    "semver==3.0.2",
]

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
